--- a/.github/workflows/index_scripts.yml
+++ b/.github/workflows/index_scripts.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
       name: creates text file with data for all .lua scripts
 
-      shell: bash
+    - shell: bash
       run: |
         true > scripts.txt
 
