--- a/.github/workflows/index_scripts.yml
+++ b/.github/workflows/index_scripts.yml
@@ -87,4 +87,4 @@ jobs:
         git add .
         git commit -am "Updated scripts.txt"
         echo 'I made it here!!!'
-        git push ${REMOTE} master  
+        git push ${REMOTE}  
