--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Generate the docs
         uses: nick-mazuk/lua-docs-generator@v1.0.6
         with:
-          input: './lua/library'
+          input: './lua/src/library'
           output: './lua/docs/library'
       - run: 'rm -rf website/docs'
       - run: 'cp -R lua/docs website/docs'
