--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ jwlua64.fxtco
 # script_settings folder is for settting user-specific parameters
 # and should not be tracked in this repo
 script_settings
+src/script_settings
