--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,11 @@ jobs:
         uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
-      - 
+      - name: build scripts
+        uses: ./.github/actions/bundle
+        with:
+          source: ./src
+          output: ./dist
       - name: Commit & Push docs to this repo
         uses: actions-js/push@v1.2
         with:
