--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - "master"
 
 jobs:
-  test-push:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repository
