--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -6,7 +6,7 @@ on:
       - "master"
 
 jobs:
-  test-push:
+  create-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repository
