utf8 library added to RGPLua 0.63

--- a/.vscode/recommended_settings.json
+++ b/.vscode/recommended_settings.json
@@ -9,7 +9,8 @@
         "eachentry",
         "pairsbykeys",
         "loadall",
-        "bit32"
+        "bit32",
+        "utf8"
     ],
     "editor.formatOnSave": true,
     "Lua.diagnostics.disable": ["lowercase-global", "luadoc-miss-cate-name"],
