--- a/.vscode/recommended_settings.json
+++ b/.vscode/recommended_settings.json
@@ -3,17 +3,25 @@
         "finale",
         "finenv",
         "finaleplugin",
+        "coll2table",
+        "dumpproperties",
         "each",
-        "eachentrysaved",
         "eachbackwards",
+        "eachcell",
         "eachentry",
-        "pairsbykeys",
+        "eachentrysaved",
+        "eachstaff",
         "loadall",
+        "loadallforregion",
+        "pairsbykeys",
         "bit32",
         "utf8"
     ],
     "editor.formatOnSave": true,
-    "Lua.diagnostics.disable": ["lowercase-global", "luadoc-miss-cate-name"],
+    "Lua.diagnostics.disable": [
+        "lowercase-global",
+        "luadoc-miss-cate-name"
+    ],
     "vscode-lua-format.configPath": "./luaconfig.config",
     "[lua]": {
         "editor.defaultFormatter": "Koihik.vscode-lua-format"
