--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ dist/**/personal*
 
 .vscode/settings.json
 */**/.vscode
+
+# ignore finale_lua_menus.txt because it can be different for every user
+# (finale_lua_menus.txt is the menu layout file used by finale_lua_menu_organizer.lua)
+finale_lua_menus.txt
+
