--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
                   persist-credentials: false
                   fetch-depth: 0
                   path: './lua'
-              run: 'rm -f ./lua/dist/*'
+            - run: 'rm -f ./lua/dist/*'
             - name: Checkout docs website repository
               uses: actions/checkout@v3
               with:
@@ -30,14 +30,10 @@ jobs:
                   source: ./lua/src
                   output: ./lua/dist
             - name: build hashes
-              with:
-                  path: '.lua'
               run: |
-                  rm -rf ./hash
-                  mkdir ./hash
-                  cd dist
-                  for file in *; do sha512sum "$file" > "../hash/$(basename "$file" .lua).hash"; done
-                  cd ..
+                  rm -rf ./lua/hash
+                  mkdir ./lua/hash
+                  for file in ./lua/dist/*; do sha512sum "$file" > ".lua/hash/$(basename "$file" .lua).hash"; done
             - name: parse scripts
               uses: ./lua/.github/actions/get-metadata
               with:
