--- a/.vscode/recommended_settings.json
+++ b/.vscode/recommended_settings.json
@@ -14,18 +14,19 @@
         "loadall",
         "loadallforregion",
         "pairsbykeys",
+        "prettyformatjson",
         "bit32",
         "utf8",
         "socket",
         "tinyxml2",
         "xmlelements",
-        "xmlattributes",
-        "prettyformatjson"
+        "xmlattributes"
     ],
     "files.exclude": {
         "decoder.lua": true,
         "mobdebug.lua": true,
-        "sax.lua": true
+        "sax.lua": true,
+        "dist/**": true
     },
     "editor.formatOnSave": true,
     "Lua.diagnostics.enable": false,
