--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
                   path: './lua'
             - run: 'rm -f ./lua/dist/*'
             - name: Checkout docs website repository
-              if: vars.GITHUB_EVENT_NAME == 'push'
+              if: github.event_name == 'push'
               uses: actions/checkout@v4
               with:
                   persist-credentials: false
@@ -60,7 +60,7 @@ jobs:
             - run: 'rm -rf website/docs'
             - run: 'cp -R lua/docs website/docs'
             - name: Commit & Push docs to website
-              if: vars.GITHUB_EVENT_NAME == 'push'
+              if: github.event_name == 'push'
               uses: actions-js/push@v1.4
               with:
                   github_token: ${{ secrets.NICK_PERSONAL_TOKEN }}
@@ -68,7 +68,7 @@ jobs:
                   branch: main
                   repository: finale-lua/jw-lua-scripts-docs
             - name: Commit & Push docs to this repo
-              if: vars.GITHUB_EVENT_NAME == 'push'
+              if: github.event_name == 'push'
               uses: actions-js/push@v1.4
               with:
                   github_token: ${{ secrets.NICK_PERSONAL_TOKEN }}
