Add linting workflow and config

--- a/.vscode/recommended_settings.json
+++ b/.vscode/recommended_settings.json
@@ -28,6 +28,7 @@
         "sax.lua": true
     },
     "editor.formatOnSave": true,
+    "Lua.diagnostics.enable": false,
     "Lua.diagnostics.disable": [
         "lowercase-global",
         "luadoc-miss-cate-name"
