--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-    "recommendations": ["Koihik.vscode-lua-format", "sumneko.lua"]
+    "recommendations": ["Koihik.vscode-lua-format", "sumneko.lua", "rog2.luacheck"]
 }
