Generate RTFNotes from Notes during build process

--- a/.github/actions/bundle/package.json
+++ b/.github/actions/bundle/package.json
@@ -10,7 +10,8 @@
         "test": "jest",
         "test:watch": "npm run test -- --watch",
         "build": "ncc build src/index.ts -o dist --target=es2015",
-        "dev": "npm run build && NODE_ENV=development node dist/index.js"
+        "dev": "npm run build && NODE_ENV=development node dist/index.js",
+        "postbuild": "copyfiles -u 1 src/custom_template.rtf dist"
     },
     "jest": {
         "collectCoverage": true,
@@ -33,6 +34,7 @@
         "@types/n-readlines": "^1.0.2",
         "@types/node": "^16.4.3",
         "@vercel/ncc": "^0.34.0",
+        "copyfiles": "^2.4.1",
         "esbuild": "^0.14.49",
         "esbuild-jest": "^0.5.0",
         "eslint": "^7.31.0",
@@ -42,6 +44,7 @@
     },
     "dependencies": {
         "@actions/core": "^1.4.0",
+        "dedent-js": "^1.0.1",
         "fs-extra": "^10.0.0",
         "luabundle": "^1.6.0",
         "luamin": "^1.0.4",
