--- a/.github/actions/bundle/tsconfig.json
+++ b/.github/actions/bundle/tsconfig.json
@@ -14,7 +14,9 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "declaration": false
+        "declaration": false,
+        "outDir": "dist",
+        "sourceMap": true
     },
     "include": [
         "**/*.ts",
