--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,10 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
           path: "./lua"
-      - run: "rm -f ./lua/dist/*"
+
+      - name: Clean out dist folder
+        run: "rm -f ./lua/dist/*"
+
       - name: Checkout docs website repository
         if: github.event_name == 'push' && github.repository_owner == 'finale-lua'
         uses: actions/checkout@v4
@@ -28,43 +31,62 @@ jobs:
           repository: finale-lua/jw-lua-scripts-docs
           path: "./website"
           token: ${{ secrets.NICK_PERSONAL_TOKEN }}
+
       - name: Install Pandoc
         shell: bash
         run: |
           sudo apt update
           sudo apt install -y pandoc
-      - name: build scripts
+
+      - name: Bundle scripts
         uses: ./lua/.github/actions/bundle
         with:
           source: ./lua/src
           output: ./lua/dist
-      - name: build hashes
+
+      - name: Create hashes
         run: |
           rm -rf ./lua/hash
           mkdir ./lua/hash
           cd ./lua/dist
           for file in *; do sha512sum "$file" > "../hash/$(basename "$file" .lua).hash"; done
           cd ../../
-      - name: parse scripts
+
+      - name: Install Lua
+        uses: leafo/gh-actions-lua@v10
+
+      - name: Install LuaRocks
+        uses: leafo/gh-actions-luarocks@v4
+
+      - name: Install lunajson
+        run: luarocks install lunajson
+
+      - name: Get metadata from scripts
         uses: ./lua/.github/actions/get-metadata
         with:
           source: ./lua/src
           output: ./website/src/lib/lib/script-data.json
+
       - name: Generate the docs
         uses: finale-lua/lua-docs-generator@1.3.4
         with:
           input: "./lua/src/library"
           repositoryUrl: "https://github.com/finale-lua/lua-scripts/tree/${{ github.ref }}/src/library"
           output: "./lua/docs/library"
+
       - name: Generate the docs
         uses: finale-lua/lua-docs-generator@1.3.4
         with:
           input: "./lua/src/mixin"
           repositoryUrl: "https://github.com/finale-lua/lua-scripts/tree/${{ github.ref }}/src/mixin"
           output: "./lua/docs/mixin"
-      - run: "rm -rf website/docs"
-      - run: "cp -R lua/docs website/docs"
-      - name: Commit & Push docs to website
+
+      - name: Copy docs to website folder
+        run: |
+          rm -rf website/docs
+          cp -R lua/docs website/docs
+
+      - name: Commit & push docs to website
         if: github.event_name == 'push' && github.repository_owner == 'finale-lua'
         uses: finale-lua/commit-and-push@1.4.1
         with:
@@ -72,7 +94,8 @@ jobs:
           directory: website
           branch: main
           repository: finale-lua/jw-lua-scripts-docs
-      - name: Commit & Push docs to this repo
+
+      - name: Commit & push changes to this repo
         if: github.event_name == 'push' && github.repository_owner == 'finale-lua'
         uses: finale-lua/commit-and-push@1.4.1
         with:
