--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ ! contains(github.event.head_commit.message, 'autopublish') }}
     steps:
       - name: Checkout this repository
         uses: actions/checkout@v4
